Change defaults for point charge

--- a/PointCharge.ipynb
+++ b/PointCharge.ipynb
@@ -78,8 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "beta = np.array([0.2,0.0,0.0])\n",
-    "a    = np.array([0.0, 1.0])\n",
+    "beta = np.array([0.4, 0.0, 0.0])\n",
+    "a    = np.array([1.0, 0.0])\n",
     "\n",
     "# now we calculate the intensity\n",
     "f = np.zeros_like(theta)\n",
@@ -113,8 +113,9 @@
     "                    subplot_titles=['Intensity of radiation emitted by the point charge'] )\n",
     "\n",
     "contour_xyz = { 'x': {'show': True, 'size': 1.}, 'y': {'show': True, 'size': 10.}, 'z': {'show': True, 'size': 100.}  }\n",
+    "contour_none = { 'x': {'show': False}, 'y': {'show': False}, 'z': {'show': False}  }\n",
     "\n",
-    "fig.add_trace(go.Surface(x=f*x, y=f*y, z=f*z, surfacecolor=f, contours=contour_xyz), 1, 1)\n",
+    "fig.add_trace(go.Surface(x=f*x, y=f*y, z=f*z, surfacecolor=f, contours=contour_none), 1, 1)\n",
     "fig.show()"
    ]
   },
